--- a/.gitignore
+++ b/.gitignore
@@ -1,107 +1,26 @@
-
+MatPlot/.vs/MatPlot/v15/ipch/
 MatPlot/.vs/MatPlot/v15/Browse.VC.db
-MatPlot/.vs/MatPlot/v15/ipch/55b21bc65e13893b.ipch
-MatPlot/.vs/MatPlot/v15/ipch/a0e52ab1e470cf3d.ipch
-MatPlot/MatPlot/Release/MatPlot.log
-MatPlot/MatPlot/Release/MatPlot.obj
-MatPlot/MatPlot/Release/MatPlot.pch
-MatPlot/MatPlot/Release/MatPlot.res
-MatPlot/MatPlot/Release/MatPlot.tlog/CL.command.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/CL.read.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/CL.write.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/link.command.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/link.read.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/link.write.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/MatPlot.lastbuildstate
-MatPlot/MatPlot/Release/MatPlot.tlog/MatPlot.write.1u.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/rc.command.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/rc.read.1.tlog
-MatPlot/MatPlot/Release/MatPlot.tlog/rc.write.1.tlog
-MatPlot/MatPlot/Release/MatPlotDlg.obj
-MatPlot/MatPlot/Release/Plot.obj
-MatPlot/MatPlot/Release/stdafx.obj
-MatPlot/MatPlot/Release/vc141.pdb
-MatPlot/MatPlot/x64/Release/MatPlot.log
-MatPlot/MatPlot/x64/Release/MatPlot.obj
-MatPlot/MatPlot/x64/Release/MatPlot.pch
-MatPlot/MatPlot/x64/Release/MatPlot.res
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/CL.command.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/CL.read.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/CL.write.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/link.command.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/link.read.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/link.write.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/MatPlot.lastbuildstate
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/MatPlot.write.1u.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/rc.command.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/rc.read.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlot.tlog/rc.write.1.tlog
-MatPlot/MatPlot/x64/Release/MatPlotDlg.obj
-MatPlot/MatPlot/x64/Release/Plot.obj
-MatPlot/MatPlot/x64/Release/stdafx.obj
-MatPlot/MatPlot/x64/Release/vc141.pdb
-MatPlot/Release/MatPlot.dll
-MatPlot/Release/MatPlot.exp
-MatPlot/Release/MatPlot.iobj
-MatPlot/Release/MatPlot.ipdb
-MatPlot/Release/MatPlot.lib
-MatPlot/Release/MatPlot.pdb
-MatPlot/x64/Release/MatPlot.dll
-MatPlot/x64/Release/MatPlot.exp
-MatPlot/x64/Release/MatPlot.iobj
-MatPlot/x64/Release/MatPlot.ipdb
-MatPlot/x64/Release/MatPlot.lib
-MatPlot/x64/Release/MatPlot.pdb
-MatPlot/.vs/MatPlot/v15/Browse.VC.opendb
-MatPlot/.vs/MatPlot/v15/ipch/ef3ffdd87a1e828d.ipch
-MatPlot/.vs/MatPlot/v15/ipch/fcb0df4758f16beb.ipch
-MatPlot/Debug/MatPlot.dll
-MatPlot/Debug/MatPlot.exp
-MatPlot/Debug/MatPlot.ilk
-MatPlot/Debug/MatPlot.lib
-MatPlot/Debug/MatPlot.pdb
-MatPlot/MatPlot/Debug/MatPlot.log
-MatPlot/MatPlot/Debug/MatPlot.obj
-MatPlot/MatPlot/Debug/MatPlot.pch
-MatPlot/MatPlot/Debug/MatPlot.res
-MatPlot/MatPlot/Debug/MatPlot.tlog/CL.command.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/CL.read.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/CL.write.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/link.command.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/link.read.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/link.write.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/MatPlot.lastbuildstate
-MatPlot/MatPlot/Debug/MatPlot.tlog/MatPlot.write.1u.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/rc.command.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/rc.read.1.tlog
-MatPlot/MatPlot/Debug/MatPlot.tlog/rc.write.1.tlog
-MatPlot/MatPlot/Debug/MatPlotDlg.obj
-MatPlot/MatPlot/Debug/Plot.obj
-MatPlot/MatPlot/Debug/stdafx.obj
-MatPlot/MatPlot/Debug/vc141.idb
-MatPlot/MatPlot/Debug/vc141.pdb
-MatPlot/MatPlot/x64/Debug/MatPlot.log
-MatPlot/MatPlot/x64/Debug/MatPlot.obj
-MatPlot/MatPlot/x64/Debug/MatPlot.pch
-MatPlot/MatPlot/x64/Debug/MatPlot.res
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/CL.command.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/CL.read.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/CL.write.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/link.command.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/link.read.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/link.write.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/MatPlot.lastbuildstate
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/MatPlot.write.1u.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/rc.command.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/rc.read.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlot.tlog/rc.write.1.tlog
-MatPlot/MatPlot/x64/Debug/MatPlotDlg.obj
-MatPlot/MatPlot/x64/Debug/Plot.obj
-MatPlot/MatPlot/x64/Debug/stdafx.obj
-MatPlot/MatPlot/x64/Debug/vc141.idb
-MatPlot/MatPlot/x64/Debug/vc141.pdb
-MatPlot/x64/Debug/MatPlot.dll
-MatPlot/x64/Debug/MatPlot.exp
-MatPlot/x64/Debug/MatPlot.ilk
-MatPlot/x64/Debug/MatPlot.lib
-MatPlot/x64/Debug/MatPlot.pdb
+MatPlot/Debug/
+MatPlot/Release/
+MatPlot/x64/
+MatPlot/MatPlot/Debug/
+MatPlot/MatPlot/Release/
+MatPlot/MatPlot/x64/
+
+MatPlotClient/.vs/MatPlotClient/v15/ipch/
+MatPlotClient/.vs/MatPlotClient/v15/Browse.VC.db
+MatPlotClient/Debug/
+MatPlotClient/Release/
+MatPlotClient/x64/
+MatPlotClient/MatPlotClient/Debug/
+MatPlotClient/MatPlotClient/Release/
+MatPlotClient/MatPlotClient/x64/
+
+MatPlotTest/.vs/MatPlotTest/v15/ipch/
+MatPlotTest/.vs/MatPlotTest/v15/Browse.VC.db
+MatPlotTest/Debug/
+MatPlotTest/Release/
+MatPlotTest/x64/
+MatPlotTest/MatPlotTest/Debug/
+MatPlotTest/MatPlotTest/Release/
+MatPlotTest/MatPlotTest/x64/
